# nutrition-tracker

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  nutrition_tracker.db  pyproject.toml
.github/workflow/: cd.yml  ci.yml
.github/workflows/: cd.yml  ci.yml
deploy/charts/nutrition-tracker/: Chart.yaml  values.yaml
deploy/charts/nutrition-tracker/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
src/app/: main.py
src/app/adapters/: manual.py  open_food_facts.py  usda_fooddata.py
src/app/api/: dependencies.py
src/app/api/v1/: goals.py  logs.py  products.py  router.py  templates.py
src/app/core/: config.py  metrics.py  security.py
src/app/domain/: models.py  ports.py
src/app/repositories/: base.py  goals_repository.py  log_repository.py  manual_product_repository.py  sqlite_log_repository.py  template_repository.py
src/app/services/: barcode_service.py  export_service.py  goals_service.py  log_service.py  notification_service.py  product_cache.py  product_service.py  template_service.py
src/nutrition_tracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: conftest.py
test/integration/: test_api_logs.py
test/unit/: test_adapters.py  test_log_service.py
tests/: conftest.py
tests/integration/: test_api_export.py  test_api_goals.py  test_api_logs.py  test_api_products.py  test_api_templates.py
tests/unit/: test_adapters.py  test_barcode_service.py  test_export_service.py  test_goals_service.py  test_log_service.py  test_metrics.py  test_models.py  test_notification_service.py  test_product_cache.py  test_sqlite_repository.py  test_template_service.py
