# pyproject.toml
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:BuildBackend"

[project]
name = "nutrition-tracker"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
```

---

## Architekturübersicht
```
HTTP Request
     │
     ▼
┌─────────────────────────────────────────┐
│  FastAPI Layer                          │
│  ┌──────────┐  ┌─────────────────────┐ │
│  │ Security │  │  Rate Limiter       │ │
│  │ (API-Key)│  │  (slowapi)          │ │
│  └──────────┘  └─────────────────────┘ │
│         │                              │
│  ┌──────▼──────────────────────────┐   │
│  │  Routers (v1/logs)              │   │
│  └──────────────────┬──────────────┘   │
└─────────────────────┼───────────────── ┘
                      │
             ┌────────▼────────┐
             │   LogService     │  ← Core Domain
             │  (tenant-aware)  │
             └────┬────────┬───┘
                  │        │
     ┌────────────▼──┐  ┌──▼──────────────────┐
     │ LogRepository │  │  Adapter Registry    │
     │ (In-Memory)   │  │  ┌────────────────┐  │
     └───────────────┘  │  │ OFF Adapter    │  │
                        │  ├────────────────┤  │
                        │  │ USDA Adapter   │  │
                        │  └────────────────┘  │
                        │  ↑ ProductSourcePort  │
                        └──────────────────────┘
                                  │
                    ┌─────────────┴─────────────┐
                    │                           │
             ┌──────▼──────┐           ┌────────▼──────┐
             │ Open Food   │           │ USDA FoodData │
             │ Facts API   │           │ Central API   │
             └─────────────┘           └───────────────┘